--- a/visualizar.html
+++ b/visualizar.html
@@ -66,7 +66,7 @@
         let filteredProducts = []; // Para armazenar produtos filtrados
 
         function fetchProducts() {
-            fetch('http://localhost:3000/users') // Atualizando para o endpoint correto
+            fetch('https://vencimento-api.vercel.app/?vercelToolbarCode=0OKDZt84bnGLUP7/users') // Atualizando para o endpoint correto
                 .then(response => {
                     if (!response.ok) {
                         throw new Error('Erro ao buscar produtos');
@@ -109,7 +109,7 @@
         }
 
         function deleteProduct(codigo_barra, validade_produto) {
-            fetch(`http://localhost:3000/users`, {
+            fetch(`https://vencimento-api.vercel.app/?vercelToolbarCode=0OKDZt84bnGLUP7/users`, {
                 method: 'DELETE',
                 headers: {
                     'Content-Type': 'application/json',
